fixed overflow problem

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@ body,
   width: 100vw;
 }
 
+*{
+  overflow: visible !important;
+}
 
 
 a{
